@@ -1,3 +1,10 @@
+Mon Oct 06 00:12:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountsWindow.cpp:
+	* src/QGaimConvButton.cpp:
+	* src/QGaimConvWindow.cpp:
+	  - Fixed the scaling on the conversations button and the tabs.
+
 Mon Oct 06 00:04:34 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountEditor.cpp:
